<resources>
    <string name="app_name" translatable="false">Venus</string>
    <string name="text_id_num">ID raqam</string>
    <string name="text_password">Parol</string>
    <string name="text_enter">Kirish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_contract_graph">Kontrakt\nhisobi</string>
    <string name="text_table">Dars\njadvali</string>
    <string name="text_attendance">Davomat</string>
    <string name="text_som">so`m</string>
    <string name="text_err_id_enter">ID raqamini kiriting</string>
    <string name="text_err_password_enter">Parolni kiriting</string>
    <string name="text_wrong_password">ID yoki Parol notog`ri</string>
    <string name="text_err_connect">Internet bilan aloqa yo‘q</string>
    <string name="text_loading_data">Maʼlumotlar yuklanmoqda</string>
    <string name="text_err_loading_data">Maʼlumotlarni yuklashda muammo yuz berdi</string>
    <string name="text_data_loaded">Maʼlumotlar yuklandi</string>
    <string name="text_debit">qarzdor</string>
    <string name="text_credit">haqdor</string>
    <string name="text_data_loading">Yuklanmoqda…</string>
    <string name="text_sort_for_year">Yillik maʼlumotlar</string>
    <string name="text_sort_for_moth">Oylik maʼlumotlar</string>
    <string name="text_sort_for_all">Umumiy maʼlumotlar</string>
    <string name="text_yan">Yanvar</string>
    <string name="text_fev">Fevral</string>
    <string name="text_mar">Mart</string>
    <string name="text_apr">Aprel</string>
    <string name="text_may">May</string>
    <string name="text_jun">Iyun</string>
    <string name="text_jul">Iyul</string>
    <string name="text_avg">Avgust</string>
    <string name="text_snt">Sentyabr</string>
    <string name="text_okt">Oktyabr</string>
    <string name="text_nyb">Noyabr</string>
    <string name="text_dek">Dekabr</string>
    <string name="text_year">Yil</string>
    <string name="text_not_found">Ushbu oraliqda maʼlumot topilmadi</string>
    <string name="text_soon">Ushbu bo`lim tez kunda ishga tushadi!</string>
    <string name="text_main_table">Asosiy</string>
    <string name="text_deno_table">Surat</string>
    <string name="text_numer_table">Maxraj</string>
    <string name="text_lecture">Leksiya</string>
    <string name="text_pracrice">Amaliyot</string>
    <string name="text_lab">Laboratory</string>
    <string name="text_room">Xona</string>
    <string name="text_cancel">Ortga</string>
    <string name="text_ok">Xa</string>
    <string name="text_enter_date">Sanani kiriting</string>
    <string name="text_coming_time">Kelgan\nvaqti</string>
    <string name="text_out_time">Ketgan\nvaqti</string>

    <array name="Weeks">
        <item>Dushanba</item>
        <item>Seshanba</item>
        <item>Chorshanba</item>
        <item>Payshanba</item>
        <item>Juma</item>
        <item>Shanba</item>
    </array>
</resources>