<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_marginHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/text_dialog_bg"
        android:text="@string/text_enter_date"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_medium"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCalendar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_calendar2"
        app:layout_constraintTop_toTopOf="@id/tvCalendar1"
        app:layout_constraintBottom_toBottomOf="@id/tvCalendar1"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCalendar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_bg"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="7dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/imgCalendar"
        app:layout_constraintEnd_toStartOf="@id/tvLine"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="—"
        app:layout_constraintTop_toTopOf="@id/tvCalendar1"
        app:layout_constraintBottom_toBottomOf="@id/tvCalendar1"
        app:layout_constraintStart_toEndOf="@id/tvCalendar1"
        app:layout_constraintEnd_toStartOf="@id/tvCalendar2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCalendar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_bg"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="7dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLine"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/btn_gradient"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_cancel"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/imgCalendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/btn_gradient"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_ok"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/imgCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>