<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.range.venus.ui.fragment.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgWallpaper"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_home_fon"
            android:scaleType="fitXY"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_menu"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_message"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_medium"
            android:text="@{viewModel.tvStudentName}"
            app:layout_constraintTop_toBottomOf="@id/imgMenu"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUniverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_univer"
            android:drawablePadding="5dp"
            android:textSize="12sp"
            android:text="@{viewModel.tvUniverName}"
            app:layout_constraintTop_toBottomOf="@id/tvStudentName"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_medium"
            android:drawableStart="@drawable/ic_student"
            android:drawablePadding="5dp"
            android:text="@{viewModel.tvGroupName}"
            app:layout_constraintTop_toBottomOf="@id/tvUniverName"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_splash_logo"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/imgWallpaper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContract"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_gradient"
            android:paddingHorizontal="15dp"
            android:drawableStart="@drawable/ic_contract"
            android:drawablePadding="15dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:text="@string/text_contract_graph"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->viewModel.openContract()}"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTable"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_gradient"
            android:paddingHorizontal="15dp"
            android:drawableStart="@drawable/ic_table"
            android:drawablePadding="15dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:text="@string/text_table"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/tvContract"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAttendance"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn_gradient"
            android:paddingHorizontal="15dp"
            android:drawableStart="@drawable/ic_attendance"
            android:drawablePadding="15dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:text="@string/text_attendance"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/tvTable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>